--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ManagerConsultList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ManagerConsultList.cshtml
@@ -162,6 +162,8 @@
                                         <option value="預約日期低至高" data-sorting-column="ScheduleDate" data-sorting-class="is-asc">預約日期低至高</option>
                                         <option value="預約理專姓名筆劃高至低" data-sorting-column="EmployeeName" data-sorting-class="is-desc">預約理專姓名筆劃高至低</option>
                                         <option value="預約理專姓名筆劃低至高" data-sorting-column="EmployeeName" data-sorting-class="is-asc">預約理專姓名筆劃低至高</option>
+                                        <option value="預約狀態高至低" data-sorting-column="StatusCode" data-sorting-class="is-desc">預約狀態高至低</option>
+                                        <option value="預約狀態低至高" data-sorting-column="StatusCode" data-sorting-class="is-asc">預約狀態低至高</option>
                                     </select>
                                 </div>
                             </div>
@@ -210,6 +212,7 @@
                                                 <th>
                                                     <div class="c-table__title">
                                                         <span>預約狀態</span>
+                                                        <a href="#" class="o-sorting" data-sorting-column="StatusCode"></a>
                                                     </div>
                                                 </th>
                                                 <th>
@@ -692,6 +695,7 @@
                 window.loading('hide');
             }, 300);
         });
+
         $('#consultationListTable2').on('click.sorting', '.o-sorting', function (e) {
             e.preventDefault();
             // 呼叫 loading
