Update：全產品搜尋頁－ ETF 搜尋 autocomplete 加上交易所代碼

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/SiteProductSearch/SiteProductSearchIndex.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/SiteProductSearch/SiteProductSearchIndex.cshtml
@@ -885,7 +885,7 @@
                     if (Object.keys(this.Result.List).length != 0) {
                         $.each(this.Result.List.ETF, function (i, item) {
                             let obj = {
-                                value: item.FirstBankCode + ' ' + item.ETFName,
+                                value: item.ExchangeCode.Value + ' ' + item.FirstBankCode + ' ' + item.ETFName,
                                 data: {
                                     type: 'ETF',
                                     detailUrl: '@Model.SearchResultModel.EtfDetailPageLink' + '?' + $.param({ id: item.FirstBankCode }),
