Update : 修正PDF下載時，c-calcLecture__img 裡圖片的 src 被加密導致無法被下載問題

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/MemberCalculationList/MemberCalculationList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/MemberCalculationList/MemberCalculationList.cshtml
@@ -158,6 +158,14 @@
 
                     $('#downloadPdf').append(data.Description);
 
+                    var $imgElement = $('.c-calcLecture__img');
+
+                    if ($imgElement.length) {
+                        var src = $imgElement.attr('src');
+                        var cleanSrc = src.split('?')[0];
+                        $imgElement.attr('src', cleanSrc);
+                    }
+
                     for (var i = 0; i < data.EarningsChart.length; i++) {
                         $('#downloadPdf').append('<section class="c-section downloadPdf_Wrap"><div class="l-wrap">' + data.EarningsChart[i] + '</div></section>');
                     }
